# ocaml-exec-minimal

./: Makefile  README.md  cookiecutter.json
.github/workflows/: ci.yml
{{cookiecutter.name}}/: .gitignore  Makefile  README.md  dune  dune-project  test.t  {{cookiecutter.main_name}}.ml  {{cookiecutter.name}}.opam
